--- a/Doibong/Doibong.css
+++ b/Doibong/Doibong.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
@@ -143,7 +144,7 @@ body {
 }
 .banner-search{
     min-height: 300px;
-    background-image: url(background.jpg);
+    background-image: url(/background.jpg);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -197,10 +198,7 @@ body {
     width: 4%;
     background-color: #FF9900;
 }
-.banner-main-top1{
-    height: 400px;
-}
-.top1-NgoaiHangAnh{
+.top1-Mu{
     width: 90%;
     height: 90%;
     margin: 5%;
@@ -209,21 +207,20 @@ body {
     display: flex;
     flex-direction: column;
 }
-.Logo-NHA{
-    width: 35%;
-    height: 90px;
+.Logo-Mu{
+    width: 115px;
+    height: 115px;
     margin: -50px 0 0 32%;
     border-radius: 50%;
     border: 4px solid white;
     cursor: pointer;
 }
-.Logo-NHA img{
+.Logo-Mu img{
     width: 100%;
     height: 100%;
     border-radius: 50%;
 }
-.top1-Laliga
-{
+.top1-Realmadrid{
     width: 90%;
     height: 90%;
     margin: 5%;
@@ -232,43 +229,20 @@ body {
     display: flex;
     flex-direction: column;
 }
-.Logo-Laliga{
-    width: 35%;
-    height: 90px;
-    margin: -50px 0 0 32%;
-    border-radius: 50%;
-    border: 4px solid white;
-    cursor: pointer;
-    
-}
-.Logo-Laliga img{
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-}
-.top1-Bundesliga{
-    width: 90%;
-    height: 90%;
-    margin: 5%;
-    border-radius: 4px;
-    border: 1px solid black;
-    display: flex;
-    flex-direction: column;
-}
-.Logo-Bundesliga{
-    width: 35%;
-    height: 90px;
+.Logo-Realmadrid{
+    width: 115px;
+    height: 115px;
     margin: -50px 0 0 32%;
     border-radius: 50%;
     border: 4px solid white;
     cursor: pointer;
 }
-.Logo-Bundesliga img{
+.Logo-Realmadrid img{
     width: 100%;
     height: 100%;
     border-radius: 50%;
 }
-.top1-SerieA{
+.top1-BayerLavenkusen{
     width: 90%;
     height: 90%;
     margin: 5%;
@@ -277,27 +251,47 @@ body {
     display: flex;
     flex-direction: column;
 }
-.Logo-SerieA{
-    width: 35%;
-    height: 90px;
+.Logo-BayerLavenkusen{
+    width: 115px;
+    height: 115px;
     margin: -50px 0 0 32%;
     border-radius: 50%;
-    border: 4px solid white;  
-    cursor: pointer;  
+    border: 4px solid white;
+    cursor: pointer;
 }
-.Logo-SerieA img{
+.Logo-BayerLavenkusen img{
     width: 100%;
     height: 100%;
     border-radius: 50%;
 }
+.top1-Roma{
+    width: 90%;
+    height: 90%;
+    margin: 5%;
+    border-radius: 4px;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+}
+.Logo-Roma{
+    width: 115px;
+    height: 115px;
+    margin: -50px 0 0 32%;
+    border-radius: 50%;
+    border: 4px solid white;
+    cursor: pointer;
+}
+.Logo-Roma img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
 /*div {
     border: 1px solid black;
 
 }*/
-.banner-main-top2{
-    height: 400px;
-}
-.top2-VLeague{
+.top2-Hanoi{
     width: 90%;
     height: 90%;
     margin: 5%;
@@ -306,21 +300,20 @@ body {
     display: flex;
     flex-direction: column;
 }
-.Logo-Vleague{
-    width: 35%;
-    height: 90px;
+.Logo-Hanoi{
+    width: 115px;
+    height: 115px;
     margin: -50px 0 0 32%;
     border-radius: 50%;
     border: 4px solid white;
     cursor: pointer;
 }
-.Logo-Vleague img{
+.Logo-Hanoi img{
     width: 100%;
     height: 100%;
     border-radius: 50%;
 }
-.top2-Lique1
-{
+.top2-PSG{
     width: 90%;
     height: 90%;
     margin: 5%;
@@ -329,43 +322,20 @@ body {
     display: flex;
     flex-direction: column;
 }
-.Logo-Lique1{
-    width: 35%;
-    height: 90px;
-    margin: -50px 0 0 32%;
-    border-radius: 50%;
-    border: 4px solid white;
-    cursor: pointer;
-    
-}
-.Logo-Lique1 img{
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-}
-.top2-Eredivisie{
-    width: 90%;
-    height: 90%;
-    margin: 5%;
-    border-radius: 4px;
-    border: 1px solid black;
-    display: flex;
-    flex-direction: column;
-}
-.Logo-Eredivisie{
-    width: 35%;
-    height: 90px;
+.Logo-PSG{
+    width: 115px;
+    height: 115px;
     margin: -50px 0 0 32%;
     border-radius: 50%;
     border: 4px solid white;
     cursor: pointer;
 }
-.Logo-Eredivisie img{
+.Logo-PSG img{
     width: 100%;
     height: 100%;
     border-radius: 50%;
 }
-.top1-ThaiLeague1{
+.top2-heerenveenfc{
     width: 90%;
     height: 90%;
     margin: 5%;
@@ -374,15 +344,37 @@ body {
     display: flex;
     flex-direction: column;
 }
-.Logo-ThaiLeague1{
-    width: 35%;
-    height: 90px;
+.Logo-heerenveenfc{
+    width: 115px;
+    height: 115px;
     margin: -50px 0 0 32%;
     border-radius: 50%;
-    border: 4px solid white;  
-    cursor: pointer;  
+    border: 4px solid white;
+    cursor: pointer;
 }
-.Logo-ThaiLeague1 img{
+.Logo-heerenveenfc img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+.top2-BangkokUnited{
+    width: 90%;
+    height: 90%;
+    margin: 5%;
+    border-radius: 4px;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+}
+.Logo-BangkokUnited{
+    width: 115px;
+    height: 115px;
+    margin: -50px 0 0 32%;
+    border-radius: 50%;
+    border: 4px solid white;
+    cursor: pointer;
+}
+.Logo-BangkokUnited img{
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -393,7 +385,14 @@ body {
 }*/
 .background{
     height: 29%;
-    background-image: url(Backgroung_main_all.jpg);  
+    background-image: url(background-Clb.jpg);  
+    background-size: 100%;
+}
+.banner-main-top1{
+    height: 400px;
+}
+.banner-main-top2{
+    height: 400px;
 }
 .name{
     height: 50px;
@@ -405,22 +404,12 @@ body {
     text-align: center;
     padding-top: 10px;
 }
-.year{
-    height: 30px;
-    margin: 10px 0 0 0;
-}
-.year p{
-    color: #333;
-    font-size: 15px;
-    text-align: center;
-    margin: 8px 0 0 0;
-
-}
 .time{
     width: 83%;
     height: 25px;
     display: flex;
-    margin-left: 10%;
+    margin: 25px 0 0  20%;
+
 }
 .time-icon{
     width: 10%;
@@ -438,33 +427,33 @@ body {
     height: 50px;
     display: flex;
 }
-.count-clb{
+.count-champion{
     width: 50%;
     background-color:#ffbe00 ;
     display: flex;
     clip-path: polygon(0 0, 100% 0, calc(100% - 20px) 100%, 0% 100%);
 }
-.count-clb-main{
-    width: 70%;
+.count-champion-main{
+    width: 90%;
     height: 60%;
     display: flex;
-    margin: 15px 0 0 10px ;
+    margin: 15px 0 0 0 ;
 }
 
-.clb-text {
-    width: 70%;
+.champion-text {
+    width: 75%;
     height: 100%;
     
 }
-.clb-icon{
-    width: 30%;
+.champion-icon{
+    width: 25%;
     height: 100%;
 }
-.count-clb i{
+.count-champion i{
     font-size: 25px;
 }
-.count-clb p{
-    font-size: 15px;
+.count-champion p{
+    font-size: 13px;
     font-weight: bold;
     text-align: center;
     margin-top: 3px;
@@ -493,4 +482,3 @@ body {
     font-size: 20px;
     cursor: pointer;
 }
-
