--- a/Banggia/Banggia.css
+++ b/Banggia/Banggia.css
@@ -16,7 +16,7 @@ body {
 
 .banner-header {
     width: 100%;
-    height: 101px;
+    height: 120px;
     display: flex;
 }
 
@@ -53,7 +53,7 @@ body {
 
 .banner-header-top{
     width: 102.5%;
-    height: 20%;
+    height: 30%;
     background-color: #0349b2;
     display: flex;
    /* clip-path: polygon(14px 0, 100% 0, 100% 100%, 0 100%);*/
@@ -64,6 +64,7 @@ body {
      width: 30%;
      height: 100%;
      padding-left: 15px;
+     padding-top: 5px;
 }
 .Banner-login{
     width: 20%;
@@ -83,6 +84,9 @@ body {
     text-decoration: none;
     color: white;
 }
+.log-in a p{
+    margin-top: 5px;
+}
 .log-out{
     width: 50%;
     cursor: pointer;
@@ -92,6 +96,9 @@ body {
     font-size:15px ;
     text-decoration: none;
     color: white;
+}
+.log-out a p{
+    margin-top: 5px;
 }
 .banner-header-top p {
     margin: 0;
@@ -107,14 +114,14 @@ body {
 }
 .background-header-top{
     width: 135%;
-    height: 20%;
+    height: 28%;
     background-color: #0349b2;
     position: relative;
     right: 10px;
 }
 .background-header-bottom{
     width: 136%;
-    height: 80%;
+    height: 72%;
     background-color: #b81e1f;
     position: relative;
     right: 11px;
@@ -136,7 +143,15 @@ body {
 .banner-header-top-bottom-main a p:hover {
     color: var(--primary-color); /
 }
+.followers {
+    width: 100px;
+    height: 30px;
+    margin-top: 5px;
+    border-radius: 20px;
+    margin: auto;
+    border: 1px solid #b81e1f;
 
+}
 .banner-main {
     width: 100%;
     height: 700px;
