--- a/Dangky/dangky.css
+++ b/Dangky/dangky.css
@@ -21,7 +21,6 @@
     min-height: 100px;
     padding: 32px 24px;
     text-align: center;
-
     border-radius: 2px;
     margin: 24px;
     align-self: center;
@@ -95,9 +94,13 @@
     color: #fff;
     border: none;
     width: 100%;
-    font-size: 14px;
+    font-size: 16px;
     border-radius: 8px;
     cursor: pointer;
+  }
+  .form-submit a{
+    text-decoration: none;
+    color: white;
   }
   
   .form-submit:hover {
