--- a/Main/Main.css
+++ b/Main/Main.css
@@ -12,67 +12,138 @@ body {
     font-weight: 400;
     overflow-x: hidden !important;
     position: relative;
+    
 }
 
 .banner-header {
     width: 100%;
-    height: 101px;
+    height: 120px;
     display: flex;
 }
 
 .row-header {
     width: 100%;
-}
-
-.banner-header-logo {
+}   
+.banner-header-logo{
     width: 100%;
     height: 75%;
     background-color: #0349b2;
 }
-
 .banner-header-logo {
-    width: 107%;
-    height: 70%;
-    /*  clip-path: polygon(0 0, 100% 0, calc(100% - 50px) 100%, 0% 100%);*/
-    background-color: #0349b2;
+    width:107%;
+    height: 70%;  
+  /*  clip-path: polygon(0 0, 100% 0, calc(100% - 50px) 100%, 0% 100%);*/
+    background-color: #0349b2; 
     padding-left: 50%;
 }
-
-.banner-header-logo-img {
-    width: 88%;
-    height: 100%;
-
+.banner-header-logo-img{
+    width:88%;
+    height: 100%; 
+    
 }
-
-.banner-header-logo-img img {
+.banner-header-logo-img img{
     width: 100%;
     height: 100%;
 }
-
-.banner-header-logo-bottom {
+.banner-header-logo-bottom{
     width: 97%;
-    height: 30%;
-    /* clip-path: polygon(0 0, 100% 0, calc(100% - 23px) 100%, 0% 100%);*/
-    background-color: #b81e1f;
+  height: 30%;
+ /* clip-path: polygon(0 0, 100% 0, calc(100% - 23px) 100%, 0% 100%);*/
+  background-color: #b81e1f;
 }
 
-.banner-header-top {
+.banner-header-top{
     width: 102.5%;
-    height: 20%;
+    height: 30%;
     background-color: #0349b2;
     display: flex;
-    /* clip-path: polygon(14px 0, 100% 0, 100% 100%, 0 100%);*/
+   /* clip-path: polygon(14px 0, 100% 0, 100% 100%, 0 100%);*/
     position: relative;
-    right: 6px;
-    /* Dịch chuyển sang phải */
+    right: 6px; /* Dịch chuyển sang phải */
 }
-
-.text {
-    width: 30%;
+.text{
+     width: 30%;
+     height: 100%;
+     padding-left: 15px;
+     padding-top: 5px;
+}
+.Banner-login{
+    width: 20%;
     height: 100%;
-    padding-left: 15px;
+    margin: 0 0 0 490px;
+    display: flex;
+    
 }
-
+.log-in{
+    width: 50%;
+    cursor: pointer;
+    
+}
+.log-in a {
+    text-align: center;
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
+}
+.log-in a p{
+    margin-top: 5px;
+}
+.log-out{
+    width: 50%;
+    cursor: pointer;
+}
+.log-out a{
+    text-align: center;
+    font-size:15px ;
+    text-decoration: none;
+    color: white;
+}
+.log-out a p{
+    margin-top: 5px;
+}
+.banner-header-top p {
+    margin: 0;
+    padding: 0;
+}
+.banner-header-top-bottom{
+    width: 109%;
+    height: 80%;
+    background-color: #b81e1f;
+      clip-path: polygon(55px 0, 100% 0, 100% 100%, 0 100%);
+    position: relative;
+    right: 63px;
+}
+.background-header-top{
+    width: 135%;
+    height: 28%;
+    background-color: #0349b2;
+    position: relative;
+    right: 10px;
+}
+.background-header-bottom{
+    width: 136%;
+    height: 72%;
+    background-color: #b81e1f;
+    position: relative;
+    right: 11px;
+}
+.banner-header-top-bottom-main {
+    width: 100%;
+    height: 100%;
+    margin:10px 0 0 30px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-decoration: none;
+}
+.banner-header-top-bottom-main  a{
+    text-decoration: none;
+    color: white;
+    font-size: 15PX;
+}
+.banner-header-top-bottom-main a p:hover {
+    color: var(--primary-color); /
+}
 .followers {
     width: 100px;
     height: 30px;
@@ -92,90 +163,47 @@ body {
     margin-top: 5px;
     text-decoration: none;
 }
-
-.Banner-login {
-    width: 20%;
-    height: 100%;
-    margin: 0 0 0 490px;
-    display: flex;
-
-}
-
-.log-in {
-    width: 50%;
-    cursor: pointer;
-
-}
-
-.log-in a {
-    text-align: center;
-    font-size: 15px;
-    text-decoration: none;
-    color: white;
-}
-
-.log-out {
-    width: 50%;
-    cursor: pointer;
-}
-
-.log-out a {
-    text-align: center;
-    font-size: 15px;
-    text-decoration: none;
-    color: white;
-}
-
-.banner-header-top p {
-    margin: 0;
-    padding: 0;
-}
-
-.banner-header-top-bottom {
-    width: 109%;
-    height: 80%;
-    background-color: #b81e1f;
-    clip-path: polygon(55px 0, 100% 0, 100% 100%, 0 100%);
-    position: relative;
-    right: 63px;
-}
-
-.background-header-top {
-    width: 135%;
-    height: 20%;
-    background-color: #0349b2;
-    position: relative;
-    right: 10px;
-}
-
-.background-header-bottom {
-    width: 136%;
-    height: 80%;
-    background-color: #b81e1f;
-    position: relative;
-    right: 11px;
-}
-
-.banner-header-top-bottom-main {
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
-    margin: 10px 0 0 30px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    text-decoration: none;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
 }
 
-.banner-header-top-bottom-main a {
-    text-decoration: none;
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 250px; 
+    text-align: center;
+}
+.modal-content p{
+    color: black;
+}
+
+.modal-content button {
+    margin: 10px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#confirm-yes {
+    background-color: #28a745;
     color: white;
-    font-size: 15PX;
 }
 
-.banner-header-top-bottom-main a p:hover {
-    color: var(--primary-color);/
+#confirm-no {
+    background-color: #dc3545;
+    color: white;
 }
-
 .banner-search {
     min-height: 300px;
     background-image: url(background.jpg);
@@ -1005,7 +1033,27 @@ body {
 .banner-end{
     height: 155px;  
     background-color: #b81e1f;
+    display: none; 
+    position: fixed; 
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000; 
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+   
 }
+.banner-end.show {
+    display: block;
+    transform: translateY(0); 
+    opacity: 1;
+}
+
+.banner-end.hide {
+    transform: translateY(100%); 
+    opacity: 0;
+}
+
+
 .banne-dowload{
     height: 34px;
 }
