--- a/Banggia/Banggia.css
+++ b/Banggia/Banggia.css
@@ -404,84 +404,80 @@ body {
 .banner-end-info p{
     margin: 7px 0 0 0;
 }
-/*.price-heading {
-    width: 90%;
-    height: 330px;
-    margin: auto;
-    background-color: white;
-}
+/**/
+@media (max-width: 767px) {
+    .banner-header-logo img {
+        width: 80%;
+        margin: 0 auto;
+        display: block;
+    }
 
-.generic_head_price {
-    height: 60%;
-}
+    .banner-header-top, .banner-header-top-bottom {
+        padding: 10px;
+        text-align: center;
+    }
 
-.price-heading-top {
-    height: 35%;
-    background-color: #2ECC71;
-}
+    .banner-header-top p, .Banner-login a, .banner-header-top-bottom nav a {
+        display: block;
+        margin-bottom: 10px;
+    }
 
-.price-heading-top p {
-    text-align: center;
-    font-size: 25px;
-    padding-top: 30px;
-}
-.price-heading-mid {
-    height: 52%;
-    background-color: #f4ecec;
-    display: flex;
-}
-.generic_feature_list {
-    height: 21%;
-    background-color: white;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-    margin-top: 5px;
-}
+    .Banner-login a {
+        margin: 0 5px;
+    }
 
-.generic_feature_list_text {
-    height: 100%;
-}
+    .banner-header-top-bottom nav a {
+        padding: 5px;
+        font-size: 14px;
+    }
 
-.generic_feature_list_text p {
-    color: #414141;
-    font-size: 18px;
-    text-align: center;
-    padding-top: 5px;
-}
+    .banner-main h1 {
+        font-size: 24px;
+        margin: 20px 0;
+    }
 
-.generic_feature_list_text p {
-    font-size: 18px;
-    color: #414141;
-    padding: 6px 0 0 25px;
-    margin: 0;
-    transition: transform 0.3s ease;
-}
+    .banner-price .price-block {
+        margin-bottom: 20px;
+    }
 
-.generic_feature_list_text:hover {
-    background-color: #948f8f;
-}
+    .banner-end {
+        text-align: center;
+    }
 
-.generic_feature_list_text:hover p {
-    transform: translateX(10px);
-}
+    .banner-end img {
+        display: block;
+        margin: 10px auto;
+    }
 
-.generic_price_btn {
-    height: 42%;
-    background-color: white;
+    .banner-end address {
+        text-align: center;
+    }
 
-}
+    /* Adjustments for smaller elements */
+    .price-heading {
+        padding: 10px;
+    }
 
-.generic_price_btn_content {
-    width: 40%;
-    height: 69%;
-    margin: 7px 0 0 113px;
-    border-radius: 40px;
-    background-color: #2ECC71;
-    cursor: pointer;
-}
+    .price {
+        flex-direction: column;
+        font-size: 20px;
+    }
 
-.generic_price_btn_content p {
-    font-weight: bold;
-    padding: 15px 0 0 27px;
-    font-size: 17px;
+    .price span {
+        font-size: 30px;
+    }
+
+    .price sup, .price small {
+        font-size: 14px;
+    }
+
+    .banner-end p {
+        font-size: 14px;
+        line-height: 1.5;
+    }
+
+    /* Padding adjustments */
+    .banner-header, .banner-main, .banner-end {
+        padding: 15px;
+    }
 }
