--- a/Banggia/Banggia.css
+++ b/Banggia/Banggia.css
@@ -16,7 +16,7 @@ body {
 
 .banner-header {
     width: 100%;
-    height: 120px;
+    height: 101px;
     display: flex;
 }
 
@@ -53,7 +53,7 @@ body {
 
 .banner-header-top{
     width: 102.5%;
-    height: 30%;
+    height: 20%;
     background-color: #0349b2;
     display: flex;
    /* clip-path: polygon(14px 0, 100% 0, 100% 100%, 0 100%);*/
@@ -64,7 +64,6 @@ body {
      width: 30%;
      height: 100%;
      padding-left: 15px;
-     padding-top: 5px;
 }
 .Banner-login{
     width: 20%;
@@ -84,9 +83,6 @@ body {
     text-decoration: none;
     color: white;
 }
-.log-in a p{
-    margin-top: 5px;
-}
 .log-out{
     width: 50%;
     cursor: pointer;
@@ -96,9 +92,6 @@ body {
     font-size:15px ;
     text-decoration: none;
     color: white;
-}
-.log-out a p{
-    margin-top: 5px;
 }
 .banner-header-top p {
     margin: 0;
@@ -114,14 +107,14 @@ body {
 }
 .background-header-top{
     width: 135%;
-    height: 28%;
+    height: 20%;
     background-color: #0349b2;
     position: relative;
     right: 10px;
 }
 .background-header-bottom{
     width: 136%;
-    height: 72%;
+    height: 80%;
     background-color: #b81e1f;
     position: relative;
     right: 11px;
@@ -143,15 +136,7 @@ body {
 .banner-header-top-bottom-main a p:hover {
     color: var(--primary-color); /
 }
-.followers {
-    width: 100px;
-    height: 30px;
-    margin-top: 5px;
-    border-radius: 20px;
-    margin: auto;
-    border: 1px solid #b81e1f;
 
-}
 .banner-main {
     width: 100%;
     height: 700px;
@@ -404,80 +389,84 @@ body {
 .banner-end-info p{
     margin: 7px 0 0 0;
 }
-/**/
-@media (max-width: 767px) {
-    .banner-header-logo img {
-        width: 80%;
-        margin: 0 auto;
-        display: block;
-    }
+/*.price-heading {
+    width: 90%;
+    height: 330px;
+    margin: auto;
+    background-color: white;
+}
 
-    .banner-header-top, .banner-header-top-bottom {
-        padding: 10px;
-        text-align: center;
-    }
+.generic_head_price {
+    height: 60%;
+}
 
-    .banner-header-top p, .Banner-login a, .banner-header-top-bottom nav a {
-        display: block;
-        margin-bottom: 10px;
-    }
+.price-heading-top {
+    height: 35%;
+    background-color: #2ECC71;
+}
 
-    .Banner-login a {
-        margin: 0 5px;
-    }
+.price-heading-top p {
+    text-align: center;
+    font-size: 25px;
+    padding-top: 30px;
+}
+.price-heading-mid {
+    height: 52%;
+    background-color: #f4ecec;
+    display: flex;
+}
+.generic_feature_list {
+    height: 21%;
+    background-color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    margin-top: 5px;
+}
 
-    .banner-header-top-bottom nav a {
-        padding: 5px;
-        font-size: 14px;
-    }
+.generic_feature_list_text {
+    height: 100%;
+}
 
-    .banner-main h1 {
-        font-size: 24px;
-        margin: 20px 0;
-    }
+.generic_feature_list_text p {
+    color: #414141;
+    font-size: 18px;
+    text-align: center;
+    padding-top: 5px;
+}
 
-    .banner-price .price-block {
-        margin-bottom: 20px;
-    }
+.generic_feature_list_text p {
+    font-size: 18px;
+    color: #414141;
+    padding: 6px 0 0 25px;
+    margin: 0;
+    transition: transform 0.3s ease;
+}
 
-    .banner-end {
-        text-align: center;
-    }
+.generic_feature_list_text:hover {
+    background-color: #948f8f;
+}
 
-    .banner-end img {
-        display: block;
-        margin: 10px auto;
-    }
+.generic_feature_list_text:hover p {
+    transform: translateX(10px);
+}
 
-    .banner-end address {
-        text-align: center;
-    }
+.generic_price_btn {
+    height: 42%;
+    background-color: white;
 
-    /* Adjustments for smaller elements */
-    .price-heading {
-        padding: 10px;
-    }
+}
 
-    .price {
-        flex-direction: column;
-        font-size: 20px;
-    }
+.generic_price_btn_content {
+    width: 40%;
+    height: 69%;
+    margin: 7px 0 0 113px;
+    border-radius: 40px;
+    background-color: #2ECC71;
+    cursor: pointer;
+}
 
-    .price span {
-        font-size: 30px;
-    }
-
-    .price sup, .price small {
-        font-size: 14px;
-    }
-
-    .banner-end p {
-        font-size: 14px;
-        line-height: 1.5;
-    }
-
-    /* Padding adjustments */
-    .banner-header, .banner-main, .banner-end {
-        padding: 15px;
-    }
+.generic_price_btn_content p {
+    font-weight: bold;
+    padding: 15px 0 0 27px;
+    font-size: 17px;
 }
