--- a/Dangnhap/dangnhap.css
+++ b/Dangnhap/dangnhap.css
@@ -95,19 +95,30 @@
     color: #fff;
     border: none;
     width: 100%;
-    font-size: 16px;
+    font-size: 14px;
     border-radius: 8px;
     cursor: pointer;
   }
  
-  .form-submit a{
-    text-decoration: none;
-    color: white;
-  }
+  
   .form-submit:hover {
     background-color: #1ac7b6;
   }
-
+  .form-submit a {
+    outline: none;
+    background-color: #1dbfaf;
+    margin-top: 12px;
+    padding: 12px 16px;
+    font-weight: 600;
+    color: #fff;
+    border: none;
+    width: 100%;
+    font-size: 14px;
+    border-radius: 8px;
+    cursor: pointer;
+    text-decoration: none;
+  }
+ 
   
   .form-submit:hover {
     background-color: #1ac7b6;
